--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@ Ingresa aquí tu documento de identidad en <strong>CREA</strong>: </div>
 
 <div class="m-2" name="botonComando">
 <input type="submit" id="vDocumento" name="vDocumento" 
-class="btn btn-outline-dark" value="¡Validar documento!"> </div>
+class="btn btn-outline-dark" value="¡Validar documento! (PRIMARIA)"> </div>
+
+<div class="m-2" name="botonComandoSoU">
+<input type="submit" id="vDocumentoSoU" name="vDocumentoSoU" 
+class="btn btn-outline-dark" value="¡Validar documento! (SECUNDARIA - UTU)"> </div>
 </center> </div>
 
 <div class="col-12 p-2 border rounded shadow-sm color_primario Trnsp">
